# visual_servoing_meca500

./: .gitignore  requirements.txt  run_in_docker.sh
docker/: Dockerfile  docker-compose.yml  docker-compose_gpu.yml  entrypoint.sh
src/meca500_control/: CMakeLists.txt  package.xml
src/meca500_control/src/: circle_end_effector.cpp  ibvs_dumb.cpp  meca500_sine_joint1.cpp  move_joint_pose.cpp  sine_joint1.cpp
src/meca500_filtering/: CMakeLists.txt  package.xml
src/meca500_filtering/src/: target_pose_filter.cpp
src/meca500_interfaces/: CMakeLists.txt  package.xml
src/meca500_interfaces/action/: MoveToJointPose.action
src/meca500_interfaces/srv/: GetImageJacobian.srv  GetJacobian.srv
src/meca500_launch/: CMakeLists.txt  package.xml
src/meca500_launch/launch/: sim_test.launch.py  sinewave_joint1.launch.py
src/meca500_launch/src/: home_and_follow.cpp
src/meca500_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/meca500_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  meca500.ros2_control.xacro  meca500.srdf  meca500.urdf.xacro  moveit.rviz
src/meca500_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/meca500_utils/: CMakeLists.txt  package.xml
src/meca500_utils/src/: frame_publisher.cpp  image_jacobian_calculator.cpp  jacobian_calculator.cpp
src/meca500_vision/: package.xml  setup.cfg  setup.py
src/meca500_vision/meca500_vision/: image_subscriber.py
src/meca500_world/: CMakeLists.txt  package.xml
src/meca500_world/config/: bridge.yaml
src/meca500_world/launch/: launch_bridge.py  launch_sim.py  object.launch.py  sim.launch.py  table.launch.py
src/meca500_world/meshes/: aggancio.stl  aggancio_camera_collision.stl  aggancio_camera_visual.stl  aggancio_robot_collision.stl  aggancio_robot_visual.stl
src/meca500_world/models/meca500/: meca500.urdf  meca500.xacro  meca500_no_gazebo.urdf  meca500_pkg_reference.xacro
src/meca500_world/src/: joint_velocity_bridge.cpp
src/meca500_world/worlds/: empty_world.sdf  empty_world.xacro
utils/: plot.py
